# artsnavn-kontroll

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker.yaml
src/: webapp.py
